--- a/Mouse Genetics/Cholesterol/GWAS/qtl-analysis.Rmd
+++ b/Mouse Genetics/Cholesterol/GWAS/qtl-analysis.Rmd
@@ -375,8 +375,8 @@ annotated.phenotypes %>%
   group_by(Genotype) %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2)) %>%
   ggplot(aes(y=Mean,
              x=Genotype,
              ymin=Mean-Error,
@@ -390,9 +390,9 @@ annotated.phenotypes %>%
   group_by(Genotype,sex) %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1),
-            n=length(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
   ggplot(aes(y=Mean,
              x=sex,
              fill=Genotype,
@@ -410,9 +410,9 @@ library(forcats)
 annotated.phenotypes %>%
   group_by(Genotype,sex,diet) %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1),
-            n=length(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
   mutate(diet=fct_recode(diet,
                          "Chow"='chow',
                          "HFHS"='hf')) %>%
@@ -436,29 +436,29 @@ annotated.phenotypes %>%
 
 
 
-aov(chol1~sex*Genotype, data=annotated.phenotypes %>%
+aov(chol2~sex*Genotype, data=annotated.phenotypes %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for sex-genotype interaction on chow only.')
 
-lm(chol1~sex+Genotype, data=annotated.phenotypes %>%
+lm(chol2~sex+Genotype, data=annotated.phenotypes %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for sex-genotype interaction.')
 
-aov(chol1~diet*sex*Genotype, data=annotated.phenotypes %>%
+aov(chol2~diet*sex*Genotype, data=annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for moderation of genotype effect by diet.')
 
-aov(chol1~diet+sex+Genotype+diet:Genotype, data=annotated.phenotypes %>%
+aov(chol2~diet+sex+Genotype+diet:Genotype, data=annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for moderation of genotype effect by diet.')
 
-lm(chol1~diet+sex+Genotype+diet:Genotype, data=annotated.phenotypes %>%
+lm(chol2~diet+sex+Genotype+diet:Genotype, data=annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='Model estimates for moderation of genotype effect by diet.')
@@ -521,8 +521,8 @@ second.annotated.phenotypes %>%
   group_by(Genotype) %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2)) %>%
   ggplot(aes(y=Mean,
              x=Genotype,
              ymin=Mean-Error,
@@ -536,9 +536,9 @@ second.annotated.phenotypes %>%
   group_by(Genotype,sex) %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1),
-            n=length(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
   ggplot(aes(y=Mean,
              x=sex,
              fill=Genotype,
@@ -556,9 +556,9 @@ library(forcats)
 second.annotated.phenotypes %>%
   group_by(Genotype,sex,diet) %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1),
-            n=length(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
   mutate(diet=fct_recode(diet,
                          "Chow"='chow',
                          "HFHS"='hf')) %>%
@@ -578,29 +578,29 @@ second.annotated.phenotypes %>%
   theme(text=element_text(size=16),
         legend.position=c(0.25,0.92))+ guides(fill = guide_legend(nrow = 1))
 
-aov(chol1~sex*Genotype, data=second.annotated.phenotypes %>%
+aov(chol2~sex*Genotype, data=second.annotated.phenotypes %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for sex-genotype interaction on chow only.')
 
-lm(chol1~sex+Genotype, data=second.annotated.phenotypes %>%
+lm(chol2~sex+Genotype, data=second.annotated.phenotypes %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='linear model for sex-genotype interaction.')
 
-aov(chol1~diet + sex + Genotype, data=second.annotated.phenotypes %>%
+aov(chol2~diet + sex + Genotype, data=second.annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for moderation of genotype effect by diet.')
 
-aov(chol1~diet+sex+Genotype+diet:Genotype, data=second.annotated.phenotypes %>%
+aov(chol2~diet+sex+Genotype+diet:Genotype, data=second.annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for moderation of genotype effect by diet.')
 
-lm(chol1~diet+sex+Genotype+diet:Genotype, data=second.annotated.phenotypes %>%
+lm(chol2~diet+sex+Genotype+diet:Genotype, data=second.annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='Model estimates for moderation of genotype effect by diet.')
@@ -618,8 +618,8 @@ third.annotated.phenotypes %>%
   group_by(Genotype) %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2)) %>%
   ggplot(aes(y=Mean,
              x=Genotype,
              ymin=Mean-Error,
@@ -633,9 +633,9 @@ third.annotated.phenotypes %>%
   group_by(Genotype,sex) %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1),
-            n=length(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
   ggplot(aes(y=Mean,
              x=sex,
              fill=Genotype,
@@ -653,9 +653,9 @@ library(forcats)
 third.annotated.phenotypes %>%
   group_by(Genotype,sex,diet) %>%
   filter(Genotype!='--') %>%
-  summarize(Mean=mean(chol1),
-            Error=se(chol1),
-            n=length(chol1)) %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
   mutate(diet=fct_recode(diet,
                          "Chow"='chow',
                          "HFHS"='hf')) %>%
@@ -676,29 +676,153 @@ third.annotated.phenotypes %>%
         legend.position=c(0.25,0.92))+ guides(fill = guide_legend(nrow = 1))
 
 
-aov(chol1~sex*Genotype, data=third.annotated.phenotypes %>%
+aov(chol2~sex*Genotype, data=third.annotated.phenotypes %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for sex-genotype interaction on chow only.')
 
-lm(chol1~sex+Genotype, data=third.annotated.phenotypes %>%
+lm(chol2~sex+Genotype, data=third.annotated.phenotypes %>%
   filter(diet=='chow') %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='linear model for sex-genotype interaction.')
 
-aov(chol1~diet*sex*Genotype, data=third.annotated.phenotypes %>%
+aov(chol2~diet*sex*Genotype, data=third.annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for moderation of genotype effect by diet.')
 
-aov(chol1~diet+sex+Genotype+diet:Genotype, data=third.annotated.phenotypes %>%
+aov(chol2~diet+sex+Genotype+diet:Genotype, data=third.annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='ANOVA for moderation of genotype effect by diet.')
 
-lm(chol1~diet+sex+Genotype+diet:Genotype, data=third.annotated.phenotypes %>%
+lm(chol2~diet+sex+Genotype+diet:Genotype, data=third.annotated.phenotypes %>%
+  filter(Genotype!='--')) %>%
+  tidy %>%
+  kable(caption='Model estimates for moderation of genotype effect by diet.')
+```
+
+### Pre-Computed SNPs
+
+This is based on the lead SNP from the precompiled viewer at https://churchilllab.jax.org/qtlviewer/svenson/DOHFD.  Lead SNP at chr1 171429283
+
+```{r precomputed-snp-analysis}
+
+#  genotype.data %>%
+#    filter(pos>171429664-100000&pos<171429664+100000) %>%
+#    filter(chr==1)%>% 
+#    View
+# 
+# lmm.results.hfd %>%
+#   filter(chr==1) %>% View
+
+
+precomputed.snp.id <- 'JAX00276141' #not sure if this is the correct marker
+precomputed.snp <- lmm.results %>%
+  filter(rs==precomputed.snp.id)
+
+precomputed.snp.genotypes <- 
+  filter(genotype.data, marker==precomputed.snp.id) %>% 
+  dplyr::select(-chr,-pos) %>% 
+  pivot_longer(cols=c(starts_with('F',ignore.case=F),
+                      starts_with('M',ignore.case=F)),
+                      names_to='sample',
+               values_to='Genotype') 
+
+precomputed.annotated.phenotypes <-
+  full_join(phenotype.data,
+            dplyr::select(precomputed.snp.genotypes,-marker),
+            by=c('sample'='sample'))
+
+library(ggplot2)
+location <- paste('Chr',precomputed.snp$chr,precomputed.snp$pos)
+precomputed.annotated.phenotypes %>%
+  group_by(Genotype) %>%
+  filter(diet=='chow') %>%
+  filter(Genotype!='--') %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2)) %>%
+  ggplot(aes(y=Mean,
+             x=Genotype,
+             ymin=Mean-Error,
+             ymax=Mean+Error)) +
+  geom_bar(stat='identity') +
+  geom_errorbar(width=0.5)+
+  labs(y='Cholesterol (mg/dL)',
+       x=paste('Genotype at ',paste(paste('Chr',precomputed.snp$chr,sep="")) %>% paste(precomputed.snp$ps, sep=':')))
+
+precomputed.annotated.phenotypes %>%
+  group_by(Genotype,sex) %>%
+  filter(diet=='chow') %>%
+  filter(Genotype!='--') %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
+  ggplot(aes(y=Mean,
+             x=sex,
+             fill=Genotype,
+             ymin=Mean-Error,
+             ymax=Mean+Error)) +
+  geom_bar(stat='identity',position='dodge',width=0.75) +
+  geom_errorbar(position=position_dodge(width=0.75),aes(group=Genotype), width=0.5)+
+  labs(y='Cholesterol (mg/dL)',
+       x=paste('Genotype at ',paste(paste('Chr',precomputed.snp$chr,sep="")) %>% paste(precomputed.snp$ps, sep=':')))+
+  geom_text(aes(label=n,y=5), position=position_dodge(width=0.75)) +
+  theme_classic() +
+  theme(text=element_text(size=16))
+
+library(forcats)
+precomputed.annotated.phenotypes %>%
+  group_by(Genotype,sex,diet) %>%
+  filter(Genotype!='--') %>%
+  summarize(Mean=mean(chol2),
+            Error=se(chol2),
+            n=length(chol2)) %>%
+  mutate(diet=fct_recode(diet,
+                         "Chow"='chow',
+                         "HFHS"='hf')) %>%
+  ggplot(aes(y=Mean,
+             fill=Genotype,
+             x=sex,
+             ymin=Mean-Error,
+             ymax=Mean+Error)) +
+  facet_grid(diet~.) +
+  geom_bar(stat='identity',position='dodge',width=0.75) +
+  geom_errorbar(position=position_dodge(width=0.75),aes(group=Genotype), width=0.5)+
+  labs(y='Cholesterol (mg/dL)',
+       x=paste('Genotype at ',paste(paste('Chr',precomputed.snp$chr,sep="")) %>% paste(precomputed.snp$ps, sep=':'))) +
+  geom_text(aes(label=n,y=8), 
+            position=position_dodge(width=0.75)) +
+  theme_classic() +
+  theme(text=element_text(size=16),
+        legend.position=c(0.25,0.92))+ guides(fill = guide_legend(nrow = 1))
+
+
+aov(chol2~sex*Genotype, data=precomputed.annotated.phenotypes %>%
+  filter(diet=='chow') %>%
+  filter(Genotype!='--')) %>%
+  tidy %>%
+  kable(caption='ANOVA for sex-genotype interaction on chow only.')
+
+lm(chol2~sex+Genotype, data=precomputed.annotated.phenotypes %>%
+  filter(diet=='chow') %>%
+  filter(Genotype!='--')) %>%
+  tidy %>%
+  kable(caption='linear model for sex-genotype interaction.')
+
+aov(chol2~diet*sex*Genotype, data=precomputed.annotated.phenotypes %>%
+  filter(Genotype!='--')) %>%
+  tidy %>%
+  kable(caption='ANOVA for moderation of genotype effect by diet.')
+
+aov(chol2~diet+sex+Genotype+diet:Genotype, data=precomputed.annotated.phenotypes %>%
+  filter(Genotype!='--')) %>%
+  tidy %>%
+  kable(caption='ANOVA for moderation of genotype effect by diet.')
+
+lm(chol2~diet+sex+Genotype+diet:Genotype, data=precomputed.annotated.phenotypes %>%
   filter(Genotype!='--')) %>%
   tidy %>%
   kable(caption='Model estimates for moderation of genotype effect by diet.')
@@ -732,8 +856,8 @@ annotated.lead.phenotypes <-
             lead.snp.genotypes,sample,
             by=c('sample'='sample')) 
 
-add.formula <- as.formula(paste('chol1~sex+', paste(lead.snps,collapse="+")))
-int.formula <- as.formula(paste('chol1~sex+', paste(lead.snps,collapse="*")))
+add.formula <- as.formula(paste('chol2~sex+', paste(lead.snps,collapse="+")))
+int.formula <- as.formula(paste('chol2~sex+', paste(lead.snps,collapse="*")))
 
 prs.add <- lm(add.formula, data=annotated.lead.phenotypes)
 prs.aov <- aov(add.formula, data=annotated.lead.phenotypes)
@@ -752,7 +876,7 @@ ncd.r2 <- cor.test(predict(prs.add),
 
 ncd.cor <- ggplot(prs.add,
        aes(x=predict(prs.add),
-       y=model.frame(prs.add)$chol1)) +
+       y=model.frame(prs.add)$chol2)) +
   geom_point(aes(col=sex)) +
   geom_smooth(method='lm',se=F,col='black') +
     scale_colour_manual(values = c("pink3",'royalblue1')) +
@@ -774,11 +898,11 @@ annotated.lead.phenotypes.hfd <-
             by=c('sample'='sample'))
 
 hfd.r2 <- cor.test(predict(prs.add,newdata = annotated.lead.phenotypes.hfd),
-                   annotated.lead.phenotypes.hfd$chol1)
+                   annotated.lead.phenotypes.hfd$chol2)
 
 hfd.cor <- ggplot(data=annotated.lead.phenotypes.hfd,
        aes(x=predict(prs.add,newdata = annotated.lead.phenotypes.hfd),
-       y=chol1)) +
+       y=chol2)) +
   geom_point(aes(col=sex)) +
   geom_smooth(method='lm',se=F,col='black') +
   scale_colour_manual(values = c("pink3",'royalblue1')) +
@@ -808,7 +932,7 @@ annotated.lead.phenotypes.all <-
 Calculated the relative variance explained by the PRS model, relative to gene, sex and diet effects.
 
 ```{r prs-variance}
-full.formula <- as.formula(chol1~sex+diet+sex:diet+UNC19008219 + UNC21619767 + backupUNC060370616+diet:UNC19008219 + diet:UNC21619767 + diet:backupUNC060370616)
+full.formula <- as.formula(chol2~sex+diet+sex:diet+UNC19008219 + UNC21619767 + backupUNC060370616+diet:UNC19008219 + diet:UNC21619767 + diet:backupUNC060370616)
 
 full.model <- lm(full.formula, data=annotated.lead.phenotypes.all)
 aov(full.model) %>% tidy %>% kable()
